# LicenseManager

./: .env.example  .gitignore  compose.yml  nixpacks.toml  pyproject.toml
LicenseManager/: asgi.py  settings.py  urls.py  wsgi.py
api/: admin.py  models.py  permissions.py  serializers.py  views.py
api/migrations/: 0001_initial.py  0002_client_machine_id_client_machine_lock.py
api/widgets/: file_upload.py
