[project]
name = "licensemanager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=44.0.2",
    "dj-database-url>=2.3.0",
    "django-environ>=0.12.0",
    "djangorestframework>=3.15.2",
    "drf-yasg>=1.21.9",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
]
